<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
android:id="@+id/homeFragment2"
    android:title="@string/home"
    android:icon="@drawable/ic_baseline_home_24"
    />
    <item
        android:id="@+id/chatFragment2"
        android:title="@string/chat"
        android:icon="@drawable/ic_baseline_chat_24"
        />
    <item
        android:id="@+id/cartFragment2"
        android:title="@string/cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        />
    <item
        android:id="@+id/favoritesFragment"
        android:title="@string/favorite"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        />
    <item
        android:id="@+id/accountFragment2"
        android:title="@string/account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        />
</menu>